tests-integration/fixtures/checking/1772565660_derive_newtype_not_newtype/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 39
expression: report
---
Terms
Foo :: Int -> Foo

Types
Foo :: Type

Derived
derive Show Foo

Roles
Foo = []

Diagnostics
error[ExpectedNewtype]: Expected a newtype, got: Foo
  --> 7:1..7:33
  |
7 | derive newtype instance Show Foo
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
